Use translateZ instead of scale for inactive coverflow slides, fixes #29

--- a/demo/style.css
+++ b/demo/style.css
@@ -251,6 +251,7 @@ section.bespoke-active {
 }
 section.bespoke-inactive {
 	pointer-events: none;
+	z-index: 0;
 }
 
 @media only screen and (max-width: 768px) {
